feat: comprehensive website restructure with comments and contact improvements
  - Restructure site navigation from Papers/Posts to About/Research/Blog/Contact
  - Replace Utterances with Giscus for GitHub Discussions-based comments
  - Implement JavaScript email obfuscation (fg@filippoguerranti.com) to prevent scraping
  - Update homepage from detailed sections to simple navigation links
  - Remove old content structure (papers/_index.md, posts/, data/homepage.yml)
  - Add new blog structure with hello_world.md post
  - Configure Giscus with pathname mapping and preferred color scheme
  - Update config.toml with new menu structure and markdown settings
  - Clean up generated public/ files from previous build
  - Add case_mode lowercase styling and theme auto-detection
  - Update Apollo theme templates for new site structure

--- a/config.toml
+++ b/config.toml
@@ -8,6 +8,7 @@ minify_html = true
 generate_feeds = true
 feed_filenames = ["atom.xml"]
 taxonomies = [{ name = "tags" }]
+default_language = "en"
 
 theme = "apollo"
 
@@ -19,15 +20,19 @@ highlight_themes_css = [
   { theme = "ayu-dark", filename = "syntax-theme-dark.css" },
   { theme = "ayu-light", filename = "syntax-theme-light.css" },
 ]
+render_emojis = false
+smart_punctuation = true
+bottom_footnotes = true
 
 
 [extra]
-theme = "toggle" # options: auto, toggle
+theme = "auto" # options: auto, toggle
 favicon = "/icons/favicon.ico"
 toc = true
 fancy_code = true
 mathjax = true
 mathjax_dollar_inline_enable = true
+
 
 # Font configuration
 # Options: "charter", "lora", "source-serif-pro", "crimson-text", "playfair-display", "merriweather", "system-serif", "zed" (original)
@@ -49,7 +54,8 @@ socials = [
 ]
 
 menu = [
-  { name = "/Papers", url = "/papers", weight = 1 },
-  { name = "/Posts", url = "/posts", weight = 2 },
-  { name = "/Contact", url = "/contact", weight = 3 },
+  { name = "/About", url = "/about", weight = 1 },
+  { name = "/Research", url = "/research", weight = 2 },
+  { name = "/Blog", url = "/blog", weight = 3 },
+  { name = "/Contact", url = "/contact", weight = 4 },
 ]
