--- a/config.toml
+++ b/config.toml
@@ -54,6 +54,7 @@ socials = [
 ]
 
 menu = [
+  { name = "/Home", url = "/", weight = 0 },
   { name = "/About", url = "/about", weight = 1 },
   { name = "/Research", url = "/research", weight = 2 },
   { name = "/Blog", url = "/blog", weight = 3 },
