--- a/config.toml
+++ b/config.toml
@@ -26,7 +26,7 @@ bottom_footnotes = true
 
 
 [extra]
-theme = "auto" # options: auto, toggle
+theme = "toggle" # options: auto, toggle
 favicon = "/icons/favicon.ico"
 toc = true
 fancy_code = true
@@ -40,8 +40,8 @@ font_family = "charter"
 
 # Primary color configuration
 # Set custom primary colors for light and dark themes
-primary_color_light = "#60a5fa"  # Custom blue for light theme
-primary_color_dark = "#60a5fa"   # Custom lighter blue for dark theme
+primary_color_light = "#4f46e5"  # Indigo for better contrast on light theme
+primary_color_dark = "#60a5fa"   # Lighter blue for dark theme
 
 # Case configuration
 case_mode = "lowercase"  # Options: "normal", "lowercase"
