--- a/config.toml
+++ b/config.toml
@@ -26,7 +26,7 @@ bottom_footnotes = true
 
 
 [extra]
-theme = "toggle" # options: auto, toggle
+theme = "auto" # options: auto, toggle
 favicon = "/icons/favicon.ico"
 toc = true
 fancy_code = true
