feat: improve site readability and navigation
- Increase base font size from 15px to 20px for better readability
- Scale responsive font sizing from 14-16px to 16-20px on large screens
- Reduce homepage title top margin to match standard page headers (4rem)
- Increase navigation icon sizes (1em → 1.1em) and hamburger menu (2.2em → 2.4em)
- Enlarge navigation text size from 1.25em to 1.15em for better accessibility
- Unify primary color to #60a5fa across light and dark themes
- Include compiled CSS and HTML output

--- a/config.toml
+++ b/config.toml
@@ -40,7 +40,7 @@ font_family = "charter"
 
 # Primary color configuration
 # Set custom primary colors for light and dark themes
-primary_color_light = "#4f46e5"  # Indigo for better contrast on light theme
+primary_color_light = "#3e8be9ff"  # Indigo for better contrast on light theme
 primary_color_dark = "#60a5fa"   # Lighter blue for dark theme
 
 # Case configuration
