feat: comprehensive website improvements and optimizations
- Add meta descriptions to all main pages and blog posts for better SEO
- Implement enhanced OpenGraph and X (Twitter) Card meta tags for social sharing
- Create modern SVG favicon with mathematical styling
- Add performance optimizations with DNS prefetch, preconnect, and async font loading
- Implement accessibility improvements with skip links, ARIA labels, and proper semantic HTML
- Add structured data (JSON-LD) for better search engine understanding
- Create helpful 404 error page with navigation
- Enhanced robots.txt with proper crawling instructions
- Fix Charter font loading issues by removing broken preload links

--- a/config.toml
+++ b/config.toml
@@ -37,10 +37,12 @@ mathjax_dollar_inline_enable = true
 # Font configuration
 # Options: "charter", "lora", "source-serif-pro", "crimson-text", "playfair-display", "merriweather", "system-serif", "zed" (original)
 font_family = "charter"
+# Base font size in pixels - controls overall site text size (default: 16)
+base_font_size = "16"
 
 # Primary color configuration
 # Set custom primary colors for light and dark themes
-primary_color_light = "#3e8be9ff"  # Indigo for better contrast on light theme
+primary_color_light = "#60a5fa"  # Indigo for better contrast on light theme
 primary_color_dark = "#60a5fa"   # Lighter blue for dark theme
 
 # Case configuration
