feat: improve site navigation and cross-references
- Add cross-references between about, research, blog, and contact pages
- Update homepage with better section organization and links
- Switch to Source Serif Pro font for better readability
- Add custom CSS and service worker for enhanced performance
- Improve accessibility with better aria labels and structured data
- Update content to better guide users through the site

--- a/config.toml
+++ b/config.toml
@@ -35,8 +35,8 @@ mathjax_dollar_inline_enable = true
 
 
 # Font configuration
-# Options: "charter", "lora", "source-serif-pro", "crimson-text", "playfair-display", "merriweather", "system-serif", "zed" (original)
-font_family = "charter"
+# Options: "lora", "source-serif-pro", "crimson-text", "playfair-display", "merriweather", "system-serif", "zed" (original)
+font_family = "source-serif-pro"
 # Base font size in pixels - controls overall site text size (default: 16)
 base_font_size = "16"
 
@@ -47,6 +47,9 @@ primary_color_dark = "#60a5fa"   # Lighter blue for dark theme
 
 # Case configuration
 case_mode = "lowercase"  # Options: "normal", "lowercase"
+
+# Custom stylesheets
+stylesheets = ["custom.css"]
 
 socials = [
   { name = "X", url = "https://x.com/guerrantif", icon = "x-twitter" },
