chore: clean up repository redundancies
- Remove .DS_Store system files
- Delete unused chevron icon files
- Fix favicon reference from .ico to .svg in config
- Remove empty sass directory

--- a/config.toml
+++ b/config.toml
@@ -27,7 +27,7 @@ bottom_footnotes = true
 
 [extra]
 theme = "auto" # options: auto, toggle
-favicon = "/icons/favicon.ico"
+favicon = "/icons/favicon.svg"
 toc = true
 fancy_code = true
 mathjax = true
